- MANTA-125 add experimental large insertion calling (default off)
- MANTA-125 add tier2 permissive split score to reduce small somatic
FP deletions
- MANTA-125 add tier2 chimera rate to reduce somatic FP calls 
v0.18.0
- MANTA-125 modify pair weight for small SVs
- MANTA-120 Improve stability of SV scoring as a function of read length
v0.17.0
- Filter SA split read segments by MAPQ value
- MANTA-116 better handle BWA-mem SA split-reads for inversions
- MANTA-118 static libstdc++ for gcc 4.5+
v0.16.0
- MANTA-117 add somatic quality score
- fix SA tag parsing
- MANTA-27 accept bam/fasta filenames with spaces
v0.15.0
- MANTA-108 combine clip/semi-aligned evidence detection, don't detect
overlapping reads as assembly evidence
- MANTA-98 make fewer bam scans during scoring
- MANTA-106 add high depth limit to candgen and assmbler
- MANTA-75 Better match reads to SV candidates to improve
runtime and lower repeat observations (part 2)
- MANTA-105 filter poorly supported candidates to reduce per-edge compute time
- MANTA-103 fix issue in RNA and WES modes introduced by MANTA-99
v0.14.0
- MANTA-102 filter calls with high MQ0 fraction
- MANTA-99 add high-dpeth graph filter to improve FFPE runtime
- MANTA-100 allow for neighboring variants during assembly
- MANTA-83 sort vcfs in bam chrom order
- MANTA-96 Keep matching read pairs after candidate generation
read buffer fills
- MANTA-89 Use semi-mapped read pairs to improve germline/somatic
classification.
- MANTA-92 Add edge runtime performance log
- MANTA-75 Better match reads to SV candidates to improve
runtime and lower repeat observations
- MANTA-85 Increase uniformity of tags in vcf output
v0.13.2
- First complete pass at installation and user guide
v0.13.1
- MANTA-81 Fix small indel somatic false negatives introduced
in MANTA-63
- MANTA-80 Additional workflow options: run subsections of the
genome, finer task parallelization control and merge multiple
input BAMs per sample.
v0.13.0