@@ -1,3 +1,5 @@
+- MANTA_128 Improved pair orientation estimation and assertion
+- Improve fusion specificity in RNA-Seq mode
 - MANTA-125 add experimental large insertion calling (default off)
 - MANTA-125 add tier2 permissive split score to reduce small somatic
 FP deletions
